complete ratatouille recipe

--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -7,5 +7,94 @@
 
   <body>
     <h1>Ratatouille</h1>
+    <img src="ratatouille.jpeg" alt="Image of Ratatouille" width="400px" />
+    <h2>Description</h2>
+    <p>Here is a simple yet spectacular dish providing healthy summer vegetables.
+    <br />
+    Ratatouille, a traditional French vegetable dish from the South of France, made with eggplant, zucchini, onions, tomatoes, and sometimes bell peppers.
+    <br />
+    Some ratatouille recipes make it as a vegetable stew, while others bake it as more of a casserole.</p>
+    <h3>Ingredients:</h3>
+    <h4>Sauce:</h4>
+    <ul>
+        <li>
+            <strong>Diced Tomatoes</strong> -
+            <em>1 14.5-oz can (drained)</em>
+            Since they will be pureed into a sauce, crushed tomatoes or tomato sauce can be used as a substitute for diced tomatoes in this easy ratatouille recipe.
+        </li>
+        <li>
+            <strong>Olive Oil</strong> -
+            <em>1 tbsp</em>
+            I prefer extra virgin olive oil, but you can use avocado oil, vegetable oil, or another oil of your choice.
+        </li>
+        <li>
+            <strong>Balsamic Vinegar</strong> -
+            <em>1 tbsp</em>
+            This yields the best flavor and subtle sweetness, but you could also use red wine vinegar, lemon juice, or apple cider vinegar in a pinch.
+        </li>
+        <li>
+            <strong>Herbs de Provence</strong> -
+            <em>1 tsp</em>
+            Used in French cuisine, this spice blend typically includes dried herbs such as thyme, rosemary, oregano, marjoram, savory, and sometimes lavender flowers. You can substitute Italian seasoning if you can’t find Herbs de Provence.
+        </li>
+        <li>
+            <strong>Garlic</strong> -
+            <em>3 cloves</em>
+            I recommend fresh garlic, but if you need a shortcut, use 1 1/2 teaspoons of jarred garlic instead.
+        </li>
+        <li>
+            <strong>Fresh Basil</strong> -
+            <em>2 tbsp</em>
+            You’ll need 2 tablespoons for the sauce, plus more for garnish. If you don’t have any fresh basil, you can substitute 2 teaspoons of dried basil in the sauce and skip the garnish. You can also try other fresh herbs such as thyme, parsley, rosemary, and oregano.
+        </li>
+        <li>
+            <strong>Sea Salt</strong> -
+            <em>1/4 tsp</em>
+        </li>
+    </ul>
+    <h4>Vegetables:</h4>
+    <ul>
+        <li>
+            <strong>Roma Tomatoes</strong> -
+            <em>3 Medium (sliced)</em>
+            You could use any tomatoes that are large enough to slice, but roma are the perfect size for this dish.
+        </li>
+        <li>
+            <strong>Zucchini</strong> -
+            <em>2 medium (~3/4 lb, sliced)</em>
+            You can also use other summer squash, such as yellow squash and patty pan squash, as they are similar in texture and flavor.
+        </li>
+        <li>
+            <strong>Eggplant</strong> -
+            <em>1 small (1 lb, sliced, and slices cut into quarters)</em>
+            You don’t need to peel it, but you can if you like.
+        </li>
+        <li>
+            <strong>Onion</strong> -
+            <em>1 small (sliced)</em>
+            A yellow onion or a white onion are most common in a traditional ratatouille recipe.
+        </li>
+        <li>
+            <strong>Olive Oil</strong> -
+            <em>1 tbsp</em>
+        </li>
+        <li>
+            <strong>Sea Salt</strong> -
+            <em>1/4 tsp</em>
+        </li>
+        <li>
+            <strong>Black Pepper</strong> -
+            <em>1/8 tsp</em>
+            If you like more heat, you add a sprinkle of crushed red pepper flakes.
+        </li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Combine all sauce ingredients in a blender. Puree until smooth. If needed, adjust salt and pepper to taste.</li>
+        <li>Spread the sauce in a thin layer in a medium round or oval casserole dish (this one is the perfect size).</li>
+        <li>Arrange the tomatoes, zucchini, eggplant, and onion in a spiral, alternating them. (You'll want the eggplant slices cut into quarters so that they are similar size to the tomato, zucchini and onion slices.) Drizzle with olive oil on top, and sprinkle with sea salt and black pepper.</li>
+        <li>Bake for about 30-35 minutes, until veggies are tender and sauce is bubbly at the edges.</li>
+    </ol>
   </body>
 </html>
