--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ratatouille.html">Ratatouille</a>
+    <ul>
+        <li><a href="recipes/ratatouille.html">Ratatouille</a></li>
+        <li><a href="recipes/dr-seuss-green-eggs-and-ham.html">Green Eggs and Ham</a></li>
+    </ul>
   </body>
 </html>
