Create chicen tikka masala recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/ratatouille.html">Ratatouille</a></li>
         <li><a href="recipes/dr-seuss-green-eggs-and-ham.html">Green Eggs and Ham</a></li>
+        <li><a href="recipes/chicken-tikka-masala.html">Chicken Tikka Masala</a></li>
     </ul>
   </body>
 </html>
