Add back home link to each recipe page

--- a/recipes/chicken-tikka-masala.html
+++ b/recipes/chicken-tikka-masala.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+      <a href="../index.html">Back Home</a>
     <h1>Chicken Tikka Masala</h1>
     <img src="chicken-tikka-masala.jpeg" alt="Image of Chicken Tikka Masala" width="400px" />
     <h2>Description</h2>
