--- a/recipes/dr-seuss-green-eggs-and-ham.html
+++ b/recipes/dr-seuss-green-eggs-and-ham.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Back Home</a>
     <h1>Dr Seuss Green Eggs and Ham</h1>
     <img src="dr-seuss-green-eggs-and-ham.jpeg" alt="Image of Green Eggs and Ham" width="400px" />
     <h2>Description</h2>
