--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Back Home</a>
     <h1>Ratatouille</h1>
     <img src="ratatouille.jpeg" alt="Image of Ratatouille" width="400px" />
     <h2>Description</h2>
