update individual recipe styles

--- a/recipes.html
+++ b/recipes.html
@@ -16,8 +16,8 @@
   <body>
       <header>
           <div class="site-header">
-              <nav class="container">
-                <a class="site-header__logo" href="#"><h1>
+              <nav class="site-header__content container">
+                <a class="site-header__logo" href="./index.html"><h1>
                         <svg xmlns="http://www.w3.org/2000/svg" width="205" height="59" viewBox="0 0 205 59" fill="none" role="img" aria-labelledby="a1xcr6146xosl9a68umlw1oft3lbd2d5" class="hidden lg:block h-12 w-auto text-gray-800 dark:text-gray-300"><title id="a1xcr6146xosl9a68umlw1oft3lbd2d5">Odin Logo</title>
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M8.68945 34.7331L13.1482 19.2902H30.9833L35.442 34.7331H8.68945Z" fill="#EED9C3"></path>
                           <ellipse cx="27.7849" cy="27.1223" rx="1.26005" ry="1.24284" fill="#353535"></ellipse>
@@ -36,9 +36,9 @@
                     </h1></a>
                 <div class="nav">
                     <ul class="nav__list">
-                        <li><a class="nav__link" href="#">Home</a></li>
+                        <li><a class="nav__link" href="./index.html">Home</a></li>
                         <li><a class="nav__link" target="_blank" href="https://www.theodinproject.com/lessons/foundations-recipes">About</a></li>
-                        <li><a class="nav__link" href="#">Recipes</a></li>
+                        <li><a class="nav__link" href="./recipes.html">Recipes</a></li>
                     </ul>
                     <ul class="nav__list nav__list--social">
                         <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="20" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"/></svg></a></li>
@@ -51,15 +51,15 @@
       </header>
       <main>
           <section class="recipes">
-              <a class="recipe" href="#">
+              <a class="recipe" href="./recipes/chicken-tikka-masala.html">
                   <img class="recipe__img" src="images/recipes/chicken-tikka-masala.jpeg" />
                   <p class="recipe__title">Chicken Tikka Masala</p>
               </a>
-              <a class="recipe" href="#">
+              <a class="recipe" href="./recipes/dr-seuss-green-eggs-and-ham.html">
                   <img class="recipe__img" src="images/recipes/dr-seuss-green-eggs-and-ham.jpeg" />
                   <p class="recipe__title">Green Eggs and Ham</p>
               </a>
-              <a class="recipe" href="#">
+              <a class="recipe" href="./recipes/ratatouille.html">
                   <img class="recipe__img" src="images/recipes/ratatouille.jpeg" />
                   <p class="recipe__title">Ratatouille</p>
               </a>
